<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/text_normal_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_gray"
    tools:context=".AddItemActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setting_layout"
        android:layout_width="0dp"
        android:layout_height="@dimen/information_layout_height"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:background="@drawable/button_rectangle_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintWidth_max="@dimen/view_max_width">

        <TextView
            android:id="@+id/info_text_view"
            style="@style/text_big_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/str_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_stat_view"
            style="@style/text_normal_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_main_stat"
            app:layout_constraintBottom_toTopOf="@+id/line_horizontal_060"
            app:layout_constraintEnd_toStartOf="@+id/line_vertical_035"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/line_horizontal_035" />

        <TextView
            android:id="@+id/level_text_view"
            style="@style/text_normal_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_level"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/line_vertical_035"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/line_horizontal_060" />

        <TextView
            android:id="@+id/title_text_view"
            style="@style/text_normal_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_stat_name"
            app:layout_constraintBottom_toTopOf="@+id/line_horizontal_035"
            app:layout_constraintEnd_toStartOf="@+id/line_vertical_035"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/line_horizontal_015" />


        <TextView
            android:id="@+id/main_stat_droplist"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_view_height"
            android:background="@drawable/view_border_style"
            android:gravity="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/line_horizontal_060"
            app:layout_constraintEnd_toEndOf="@+id/title_value_text_view"
            app:layout_constraintStart_toStartOf="@+id/title_value_text_view"
            app:layout_constraintTop_toTopOf="@+id/line_horizontal_035"
            app:layout_constraintVertical_bias="0.509" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_vertical_035"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_horizontal_060"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_horizontal_035"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_horizontal_015"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <TextView
            android:id="@+id/title_value_text_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_view_height"
            android:background="@drawable/view_border_style"
            android:gravity="center"
            android:paddingStart="@dimen/edit_text_horizontal_padding"
            android:paddingEnd="@dimen/edit_text_horizontal_padding"
            android:text="@string/str_stat_name"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/line_horizontal_035"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/line_vertical_035"
            app:layout_constraintTop_toTopOf="@+id/line_horizontal_015"
            app:layout_constraintWidth_max="@dimen/edit_text_max_width" />

        <TextView
            android:id="@+id/initial_level_value_text_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_view_height"
            android:background="@drawable/view_border_style"
            android:gravity="center"
            android:hint="@string/hint_min_level"
            android:text="@string/str_number_1"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/final_level_value_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/line_vertical_035"
            app:layout_constraintTop_toTopOf="@+id/line_horizontal_060"
            app:layout_constraintWidth_max="@dimen/edit_text_max_width" />

        <TextView
            android:id="@+id/final_level_value_text_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_view_height"
            android:background="@drawable/view_border_style"
            android:gravity="center"
            android:hint="@string/hint_max_level"
            android:text="@string/str_number_100"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/line_vertical_035"
            app:layout_constraintTop_toBottomOf="@+id/initial_level_value_text_view"
            app:layout_constraintWidth_max="@dimen/edit_text_max_width" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/description_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:background="@drawable/button_rectangle_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_layout"
        app:layout_constraintWidth_max="@dimen/view_max_width">


        <TextView
            android:id="@+id/desc_value_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/view_border_style"
            android:paddingStart="@dimen/edit_text_horizontal_padding"
            android:paddingEnd="@dimen/edit_text_horizontal_padding"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_min="@dimen/item_info_description_text_view_min_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_text_view"
            tools:text="@string/str_description_exam" />

        <TextView
            android:id="@+id/description_text_view"
            style="@style/text_normal_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/str_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/customizing_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:layout_marginBottom="@dimen/normal_margin"
        android:background="@drawable/button_rectangle_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_layout"
        app:layout_constraintWidth_max="@dimen/view_max_width">

        <ImageView
            android:id="@+id/button_color_image_view"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/custom_gray"
            app:layout_constraintBottom_toBottomOf="@+id/button_color_text_view"
            app:layout_constraintEnd_toEndOf="@+id/progress_bar_color_image_view"
            app:layout_constraintStart_toStartOf="@+id/progress_bar_color_image_view"
            app:layout_constraintTop_toTopOf="@+id/button_color_text_view" />

        <TextView
            android:id="@+id/custom_text_view"
            style="@style/text_big_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/str_customizing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/button_color_text_view"
            style="@style/text_normal_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginTop="@dimen/big_margin"
            android:text="@string/str_button_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/custom_text_view" />

        <TextView
            android:id="@+id/progress_color_text_view"
            style="@style/text_normal_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_marginBottom="@dimen/big_margin"
            android:text="@string/str_progress_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/button_color_text_view"
            app:layout_constraintTop_toBottomOf="@+id/button_color_text_view" />

        <ImageView
            android:id="@+id/progress_bar_color_image_view"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="@dimen/big_margin"
            android:background="@color/custom_gray"
            app:layout_constraintBottom_toBottomOf="@+id/progress_color_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/progress_color_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
