<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/recycler_item_margin"
    android:layout_marginTop="@dimen/recycler_item_margin"
    android:layout_marginEnd="@dimen/recycler_item_margin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rectangle_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="@dimen/view_max_width">

        <TextView
            android:id="@+id/item_title_text_view"
            style="@style/text_big_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/str_stat_name"
            app:layout_constraintEnd_toStartOf="@+id/item_level_text_view"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_weight="7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_level_text_view"
            style="@style/text_normal_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:text="@string/str_level_exam"
            app:layout_constraintBottom_toBottomOf="@+id/item_title_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toEndOf="@+id/item_title_text_view"
            app:layout_constraintTop_toTopOf="@+id/item_title_text_view"
            app:layout_constraintWidth_max="@dimen/view_max_width" />

        <ProgressBar
            android:id="@+id/item_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/normal_margin"
            android:max="10000"
            android:progress="5000"
            android:progressBackgroundTint="@color/black"
            android:progressTint="@color/custom_purple"
            android:scaleY="3"
            app:layout_constraintBottom_toBottomOf="@+id/item_exp_value_text_view"
            app:layout_constraintEnd_toStartOf="@+id/item_exp_value_text_view"
            app:layout_constraintStart_toStartOf="@+id/item_title_text_view"
            app:layout_constraintTop_toTopOf="@+id/item_exp_value_text_view" />

        <TextView
            android:id="@+id/item_exp_value_text_view"
            style="@style/text_normal_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            android:text="@string/str_exp_exam"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/item_level_text_view"
            app:layout_constraintTop_toBottomOf="@+id/item_title_text_view" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>