<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/preview_fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/preview_background_drawable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/preview_include"
            layout="@layout/stat_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/normal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/preview_include"
            app:layout_constraintStart_toStartOf="@+id/preview_include"
            app:layout_constraintTop_toBottomOf="@+id/preview_include"
            app:layout_constraintWidth_max="@dimen/view_max_width">


            <TextView
                android:id="@+id/preview_text_view"
                style="@style/text_normal_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginTop="@dimen/margin_4dp"
                android:layout_marginBottom="@dimen/margin_4dp"
                android:text="@string/str_preview"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <android.widget.Button
                android:id="@+id/exp_up_button"
                android:layout_width="@dimen/stat_point_button_size"
                android:layout_height="@dimen/stat_point_button_size"
                android:layout_marginEnd="@dimen/normal_margin"
                android:background="@drawable/stat_point_button_gray"
                android:text="@string/str_plus"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="@+id/exp_down_button"
                app:layout_constraintEnd_toStartOf="@+id/exp_down_button"
                app:layout_constraintTop_toTopOf="@+id/exp_down_button" />

            <android.widget.Button
                android:id="@+id/exp_down_button"
                android:layout_width="@dimen/stat_point_button_size"
                android:layout_height="@dimen/stat_point_button_size"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="@dimen/normal_margin"
                android:layout_marginBottom="@dimen/normal_margin"
                android:background="@drawable/stat_point_button_gray"
                android:text="@string/str_minus"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scroll_view_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preview_fragment_layout">

        <include
            android:id="@+id/item_info_include"
            layout="@layout/include_item_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/preview_container" />

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>